# btowntickets

./: README.md  pyproject.toml
btowntickets/: utils.py
nbs/: parkingtickets.ipynb  raw.ipynb
tests/: test_utils.py
